@@ -59,6 +59,8 @@ __Blogrolling:__\\
 {image:img=css|link=http://validator.w3.org/check?uri=$URI|alt=CSS validated}\\
 {image:img=rss1|link=http://feeds.archive.org/validator/check?url=$RSS|alt=RSS 2.0 validated}\\
 {image:img=rss-small|link=$RSS|alt=RSS Feed}
+
+Powered by {link:SnipSnap|http://snipsnap.org|img=none} {version}
   </content>
   <permissions>Edit:Editor</permissions>
  </snip>
@@ -138,8 +140,7 @@ Mnemonic | Rendering | Comment
  <snip>
   <name>snipsnap-copyright</name>
   <content>
-{link:www.snipsnap.org|http://www.snipsnap.org|img=none} | Copyright 2000-2002 Matthias L. Jugel and Stephan J. Schmidt \\
-{image:img=logo1|link=http://www.snipsnap.org/|alt=SnipSnap}
+{link:snipsnap.org|http://snipsnap.org|img=none} | Copyright 2000-2002 Matthias L. Jugel and Stephan J. Schmidt \\
   </content>
   <permissions>Edit:Editor</permissions>
  </snip>
