@@ -35,4 +35,6 @@ package org.snipsnap.snip.filter.macro.api;
 public interface ApiConverter {
   public String convert(String className);
   public void setBaseUrl(String baseUrl);
+  public String getBaseUrl();
+  public String getName();
 }
